--- a/src/assets/scss/layout/_repairs.scss
+++ b/src/assets/scss/layout/_repairs.scss
@@ -1,6 +1,6 @@
 .repairs {
   width: 100%;
-  height: 1735px;
+  height: 1785px;
 
   background-color: rgb(255, 255, 255);
 
@@ -9,7 +9,7 @@
   }
 
   @media #{$information_tablets} {
-    height: 1350px;
+    height: 1470px;
   }
 
   .logo_block {
